--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li>
                 <a href="./industry.html "><i class="twicon-taiwan-rw "></i> 工業改革</a>
             </li>
-            <li><a href="./fourth.html "><i class="twicon-taipei101 "></i> 經濟起飛</a></li>
+            <li><a href="./economy.html "><i class="twicon-taipei101 "></i> 經濟起飛</a></li>
             <li><a href="./fifth.html "><i class="twicon-black-bear "></i> 關於作者</a></li>
         </ul>
     </nav>
